# Qassam

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp  qassam_admin.sql  qassam_scan_listen.rs  qassam_scan_listen.toml 
.cache/clangd/index/: main.cpp.5D6EA867BC5A74A2.idx
.github/workflows/: cc-ci.yml  rust-ci.yml
dvr/: mod.rs  qassam_dvrt.rs
engine/: qassam_engine.cc
fiber/: mod.rs  qassam_fiber.rs
iot/: qassam_asus.cc  qassam_comtrend.cc  qassam_dlink.cc  qassam_gpon443.cc  qassam_gpon80.cc  qassam_hnap.cc  qassam_huawei.cc  qassam_jaws.cc  qassam_linksys.cc  qassam_netlink.cc  qassam_realtek.cc  qassam_thinkphp.cc  qassam_tr064.cc
kernel/: qassam_config.hh  qassam_engine.hh  qassam_support.hh
kernel/attack/: qassam_attack_methods.hh  qassam_attacks.hh
kernel/malw/: iqassam_malw.hh  qassam_asus.hh  qassam_comtrend.hh  qassam_dlink.hh  qassam_gpon443.hh  qassam_gpon80.hh  qassam_hnap.hh  qassam_huawei.hh  qassam_jaws.hh  qassam_linksys.hh  qassam_netlink.hh  qassam_realtek.hh  qassam_thinkphp.hh  qassam_tr064.hh
kernel/scanner/: qassam_gpon80_scanner.hh  qassam_hnap_scanner.hh  qassam_realtek_scanner.hh  qassam_scanner.hh
scanner/: qassam_gpon80_scanner.cc  qassam_hnap_scanner.cc  qassam_realtek_scanner.cc  qassam_scanner.cc
src/: lib.rs  main.rs
src/cnc/: mod.rs  qassam.rs  qassam_admin.rs  qassam_attack.rs  qassam_client_list.rs  qassam_database.rs
src/support/: mod.rs  qassam_support.rs
support/: qassam_support.cc
zone/: mod.rs  qassam_zone.rs
